[gd_scene load_steps=7 format=2]

[ext_resource path="res://Nodes/Characters/GenericCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Characters/Enemies/VeryAngryRunner.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Enemies/VeryAngryRunner/menancing_hiaguito.webp" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.2705, 22.7739 )

[sub_resource type="CapsuleShape2D" id=3]
height = 76.4881

[node name="VeryAngryRunner" type="Node2D"]

[node name="GenericCharacter" parent="." groups=[
"enemy",
] instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="GenericCharacter" index="0"]
scale = Vector2( 0.151633, 0.0972808 )
frames = SubResource( 1 )
animation = "run"

[node name="CollisionShape2D" parent="GenericCharacter" index="1"]
shape = SubResource( 2 )

[node name="FreeDeadNode" type="Timer" parent="GenericCharacter"]

[node name="PlayerDetector" type="Area2D" parent="GenericCharacter"]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="GenericCharacter/PlayerDetector"]
position = Vector2( -56.8643, -24.251 )
rotation = -1.27014
shape = SubResource( 3 )

[connection signal="timeout" from="GenericCharacter/FreeDeadNode" to="GenericCharacter" method="_on_FreeDeadNode_timeout"]
[connection signal="body_entered" from="GenericCharacter/PlayerDetector" to="GenericCharacter" method="_on_PlayerDetector_body_entered"]

[editable path="GenericCharacter"]
